--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,29 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+.horizontal-slider {
+  margin-right: 30px;
+  width: 12rem;
+  height: 5px;
+  background-color: darkgrey;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.example-thumb {
+  width: 15px;
+  height: 15px;
+  border-radius: 50%;
+  text-align: center;
+  border: 1px solid black;
+  cursor: pointer;
+  background-color: white;
+  font-size: small;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+:active.example-thumb {
+  transform: scale(1.1);
+  background-color: black;
+  color: white;
 }
